--- a/jupyter-notebook-tour.ipynb
+++ b/jupyter-notebook-tour.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -49,11 +49,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Infernal\n"
+     ]
+    }
+   ],
    "source": [
     "print(temperatura)"
    ]
@@ -67,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -99,11 +107,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lista original: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79]\n"
+     ]
+    }
+   ],
    "source": [
     "lista = list(range(80))\n",
     "print(\"Lista original:\", lista)"
@@ -118,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -129,11 +145,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lista embaralhada: [79, 36, 69, 20, 14, 62, 22, 19, 27, 32, 35, 4, 73, 40, 55, 30, 41, 8, 5, 12, 66, 76, 77, 57, 26, 68, 44, 72, 18, 24, 47, 39, 17, 48, 60, 25, 11, 51, 28, 0, 45, 21, 56, 33, 2, 6, 54, 34, 61, 65, 10, 75, 52, 58, 43, 74, 67, 9, 78, 7, 37, 59, 3, 70, 38, 64, 53, 63, 71, 46, 13, 1, 50, 49, 31, 29, 23, 16, 15, 42]\n"
+     ]
+    }
+   ],
    "source": [
     "# Embaralhar em inglês é \"shuffle\" (PS: comentários também são válidos)\n",
     "random.shuffle(lista)\n",
@@ -142,11 +166,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cinco primeiros numeros: [79, 36, 69, 20, 14]\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Cinco primeiros numeros:\", lista[0:5])"
    ]
