--- a/tarefa-intro-python-2.ipynb
+++ b/tarefa-intro-python-2.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -74,11 +74,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "N = len(lista)\n",
     "print(N)"
@@ -95,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -106,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -117,13 +125,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10]\n"
+     ]
+    }
+   ],
    "source": [
+    "\n",
     "print(outra_lista)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[42, 21, 14, 7, 29, 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "lista.append(50)\n",
+    "print(lista)"
    ]
   },
   {
@@ -132,15 +171,6 @@
    "source": [
     "Experimente adicionar elementos a `lista` (utilize a célula vazia abaixo; isso não é uma tarefa ainda)."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -158,11 +188,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "valor == 42\n",
+      "valor == 21\n",
+      "valor == 14\n",
+      "valor == 7\n",
+      "valor == 29\n",
+      "valor == 50\n",
+      "valor == 50\n"
+     ]
+    }
+   ],
    "source": [
     "for valor in lista:\n",
     "    print(\"valor ==\", valor)"
@@ -181,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -200,13 +244,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9, -0.32337174\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "linha = arquivo.readline()\n",
+    "print(linha)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "linha = arquivo.readline(1)\n",
     "print(linha)"
    ]
   },
@@ -226,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -244,13 +317,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function str.split>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "linha."
+    "linha.split"
    ]
   },
   {
@@ -262,11 +346,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Texto', 'separado', 'por', 'interrogacoes']\n"
+     ]
+    }
+   ],
    "source": [
     "texto = \"Texto ? separado ? por ? interrogacoes\"\n",
     "blocos = texto.split(' ? ')\n",
@@ -282,11 +374,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Texto'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "blocos[0]"
    ]
@@ -300,12 +403,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0.9, -0.32337174\\n'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "linha"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0.9', ' -0.32337174\\n']\n"
+     ]
+    }
+   ],
+   "source": [
+    "blocos = linha.split(',')\n",
+    "print(blocos)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -318,9 +454,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8889\n"
+     ]
+    }
+   ],
    "source": [
     "valor_em_texto = \"8888\"\n",
     "valor = int(valor_em_texto)\n",
@@ -329,11 +482,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.1\n"
+     ]
+    }
+   ],
    "source": [
     "float_em_texto = \"4.2\"\n",
     "valor = float(float_em_texto)\n",
@@ -349,11 +510,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "240\n"
+     ]
+    }
+   ],
    "source": [
     "arquivo = open('dados.csv')\n",
     "num_linhas = 0\n",
@@ -372,12 +541,285 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# PrÃ¡tica de IntroduÃ§Ã£o ao Python II\n",
+      "\n",
+      "\n",
+      "\n",
+      "Parte do curso\n",
+      "\n",
+      "[MatemÃ¡tica Especial I](http://www.leouieda.com/matematica-especial/)\n",
+      "\n",
+      "da [UERJ](http://www.uerj.br/).\n",
+      "\n",
+      "\n",
+      "\n",
+      "Ministrado por [Leonardo Uieda](http://www.leouieda.com/).\n",
+      "\n",
+      "\n",
+      "\n",
+      "## Objetivos\n",
+      "\n",
+      "\n",
+      "\n",
+      "* Apresentar o Jupyter notebook\n",
+      "\n",
+      "* Praticar os conceitos de programaÃ§Ã£o com Python aprendidos nas aulas anteriores\n",
+      "\n",
+      "* Aprender a carregar dados de arquivos\n",
+      "\n",
+      "\n",
+      "\n",
+      "## PreparaÃ§Ã£o\n",
+      "\n",
+      "\n",
+      "\n",
+      "Nessa prÃ¡tica vamos utilizar o [Jupyter notebook](http://jupyter.org/)\n",
+      "\n",
+      "para programar em Python. VocÃª nÃ£o precisarÃ£o utilizar editores de texto\n",
+      "\n",
+      "(como Notepad++) e arquivos `.py`.\n",
+      "\n",
+      "\n",
+      "\n",
+      "**Primeiro**, verifique que o Jupyter estÃ¡ instalado junto com\n",
+      "\n",
+      "seu Anaconda. Para isso, rode o comando abaixo no bash:\n",
+      "\n",
+      "\n",
+      "\n",
+      "    $ conda install jupyter\n",
+      "\n",
+      "\n",
+      "\n",
+      "**Segundo**, utilize o link enviado por e-mail para criar um repositÃ³rio para seu grupo.\n",
+      "\n",
+      "VocÃª precisarÃ¡ logar em sua conta do Github.\n",
+      "\n",
+      "O repositÃ³rio nÃ£o ficarÃ¡ mais em sua conta, e sim na conta compartilhada do\n",
+      "\n",
+      "LAGEX [github.com/lagex](https://github.com/lagex/).\n",
+      "\n",
+      "VocÃª tambÃ©m precisarÃ¡ escolher um nome para o seu grupo (minÃ­sculo,\n",
+      "\n",
+      "sem espaÃ§o ou caracter especial).\n",
+      "\n",
+      "Pode colocar o que quiser (recomendo ser conservador para nÃ£o se\n",
+      "\n",
+      "atrapalhar depois).\n",
+      "\n",
+      "\n",
+      "\n",
+      "**Terceiro**, os outros membros do grupo devem clicar no link tambÃ©m.\n",
+      "\n",
+      "Cada um deve logar com sua prÃ³pria conta do Github. Coloquem o nome do grupo\n",
+      "\n",
+      "que foi criado pelo colega. Isso darÃ¡ acesso *push* ao repositÃ³rio para todos\n",
+      "\n",
+      "vocÃªs.\n",
+      "\n",
+      "\n",
+      "\n",
+      "**Quarto**, peguem clones do respotÃ³rio criado acima para cada membro do grupo.\n",
+      "\n",
+      "\n",
+      "\n",
+      "**ATENÃ‡Ã‚O**: Todas as prÃ¡ticas serÃ£o feitas em repositÃ³rios e manejadas pelo git.\n",
+      "\n",
+      "Prestem atenÃ§Ã£o se estÃ£o fazendo **commits e push com frequÃªncia**.\n",
+      "\n",
+      "Isso pode evitar muita dor de cabeÃ§a no futuro.\n",
+      "\n",
+      "TambÃ©m Ã© importante lembrar de **trocar de clones** quando trocar o membro\n",
+      "\n",
+      "que estÃ¡ trabalhando. Caso contrÃ¡rio, os commits nÃ£o sairÃ£o no seu nome.\n",
+      "\n",
+      "Quando trocar o membro **deixe o outro amigo digitar**.\n",
+      "\n",
+      "NÃ£o deixe que uma Ãºnica pessoa faÃ§a commits por todos.\n",
+      "\n",
+      "Professor nÃ£o Ã© tÃ£o cego quanto vocÃªs pensam.\n",
+      "\n",
+      "\n",
+      "\n",
+      "**Quinto**, coloque um arquivo no repositÃ³rio chamado `alunos.txt` com o\n",
+      "\n",
+      "**nome completo** de cada aluno do grupo.\n",
+      "\n",
+      "\n",
+      "\n",
+      "## Jupyter notebooks\n",
+      "\n",
+      "\n",
+      "\n",
+      "Os notebooks rodam dentro de um navegador de internet (Firefox, Chrome, Safari, etc).\n",
+      "\n",
+      "Mas eles **nÃ£o rodam via internet**. Eles rodam em seu computador.\n",
+      "\n",
+      "Para utilizar o Jupyter, vocÃª precisa iniciar um servidor de notebook\n",
+      "\n",
+      "no seu computador.\n",
+      "\n",
+      "Isso soa mais complicado do que realmente Ã©.\n",
+      "\n",
+      "\n",
+      "\n",
+      "Para iniciar um servidor, abra o bash e digite:\n",
+      "\n",
+      "\n",
+      "\n",
+      "    $ jupyter notebook\n",
+      "\n",
+      "\n",
+      "\n",
+      "Espere um pouco atÃ© aparecer algo como:\n",
+      "\n",
+      "\n",
+      "\n",
+      "    [I 10:50:47.370 NotebookApp] Serving notebooks from local directory: /home/leo\n",
+      "\n",
+      "    [I 10:50:47.370 NotebookApp] 0 active kernels\n",
+      "\n",
+      "    [I 10:50:47.370 NotebookApp] The IPython Notebook is running at: http://localhost:8888/\n",
+      "\n",
+      "    [I 10:50:47.370 NotebookApp] Use Control-C to stop this server and shut down all kernels (twice to skip confirmation).\n",
+      "\n",
+      "\n",
+      "\n",
+      "Isso deve abrir o seu navegador padrÃ£o tambÃ©m em uma pÃ¡gina no endereÃ§o\n",
+      "\n",
+      "[http://127.0.0.1:8888](http://127.0.0.1:8888).\n",
+      "\n",
+      "Essa pÃ¡gina irÃ¡ te mostrar as pastas que estÃ£o em seu computador\n",
+      "\n",
+      "(a partir da pasta onde vocÃª rodou `$ jupyter notebook`).\n",
+      "\n",
+      "\n",
+      "\n",
+      "Para abrir um notebook, navegue atÃ© seu clone do repositÃ³rio\n",
+      "\n",
+      "e abra um dos arquivos `.ipynb`.\n",
+      "\n",
+      "Comece com o `jupyter-notebook-tour.ipynb`.\n",
+      "\n",
+      "**Siga as instruÃ§Ãµes no notebook e fique a vontade para explorar**.\n",
+      "\n",
+      "Lembre-se que nÃ£o tem como \"estragar de vez para todo o sempre\"\n",
+      "\n",
+      "algo que estÃ¡ sob controle de versÃ£o com o git.\n",
+      "\n",
+      "Qualquer coisa, Ã© sÃ³ pegar outro clone.\n",
+      "\n",
+      "\n",
+      "\n",
+      "## Tarefas\n",
+      "\n",
+      "\n",
+      "\n",
+      "ApÃ³s explorar o conteÃºdo de `jupyter-notebook-tour.ipynb`,\n",
+      "\n",
+      "siga as instruÃ§Ãµes em `tarefa-intro-python-2.ipynb`.\n",
+      "\n",
+      "As tarefas e **suas soluÃ§Ãµes devem estar contidas nesse notebook**.\n",
+      "\n",
+      "Por isso, faÃ§a commits de suas mudanÃ§as ao notebook.\n",
+      "\n",
+      "\n",
+      "\n",
+      "## Dicas\n",
+      "\n",
+      "\n",
+      "\n",
+      "* FaÃ§am muitos **commits**. Quanto mais melhor.\n",
+      "\n",
+      "* NÃ£o se esqueÃ§a do **push**.\n",
+      "\n",
+      "* Utilize **mensagens de commit** descritivas. \"Completei a tarefa 1\" Ã© melhor que\n",
+      "\n",
+      "  \"mudanÃ§a\".\n",
+      "\n",
+      "* Escolha nomes descritivos para **variÃ¡veis**. \"temperatura\" Ã© melhor que \"a\".\n",
+      "\n",
+      "* **Descreva o que (e por que) vocÃª fez** em comentÃ¡rios e cÃ©lulas de texto.\n",
+      "\n",
+      "  Isso serÃ¡ muito Ãºtil quando vocÃª voltar a essa tarefa depois.\n",
+      "\n",
+      "* Preste atenÃ§Ã£o aos **detalhes**. Leia as instruÃ§Ãµes com atenÃ§Ã£o.\n",
+      "\n",
+      "\n",
+      "\n",
+      "## Leitura recomendada\n",
+      "\n",
+      "\n",
+      "\n",
+      "O material da liÃ§Ã£o \"Programming with Python\" versÃ£o 4 do\n",
+      "\n",
+      "[Software Carpentry](http://software-carpentry.org/).\n",
+      "\n",
+      "Particularmente:\n",
+      "\n",
+      "\n",
+      "\n",
+      "* Lists\n",
+      "\n",
+      "* Input and Output\n",
+      "\n",
+      "* Strings\n",
+      "\n",
+      "\n",
+      "\n",
+      "## Entrega\n",
+      "\n",
+      "\n",
+      "\n",
+      "Crie uma Issue em https://github.com/leouieda/matematica-especial/ com:\n",
+      "\n",
+      "\n",
+      "\n",
+      "* TÃ­tulo: \"PrÃ¡tica Python 2: Aluno 1, Aluno 2, Aluno 3\"\n",
+      "\n",
+      "* Indique a qual turma pertece\n",
+      "\n",
+      "* Link para seu repositÃ³rio\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "arquivo = open('README.md')\n",
+    "\n",
+    "for linha in arquivo:\n",
+    "    print(linha)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# PrÃ¡tica de IntroduÃ§Ã£o ao Python II\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(linha)"
+   ]
   },
   {
    "cell_type": "markdown",
